--- a/backend/.env.example
+++ b/backend/.env.example
@@ -8,6 +8,11 @@ JWT_SECRET_KEY=your-super-secret-jwt-key-here
 # Frontend URL for CORS
 FRONTEND_URL=http://localhost:5173
 
+# Supabase Configuration
+SUPABASE_URL=your-supabase-url-here
+SUPABASE_KEY=your-supabase-anon-key-here
+SUPABASE_BUCKET_NAME=eduforge-pdfs
+
 # AI API Keys (Optional - for real AI processing)
 ANTHROPIC_API_KEY=your-anthropic-api-key-here
 OPENAI_API_KEY=your-openai-api-key-here
