--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -19,6 +19,10 @@ langchain-anthropic==0.1.4
 pdfplumber==0.10.3
 PyPDF2==3.0.1
 
+# Storage
+supabase==1.0.3
+python-magic==0.4.27
+
 # Background Job Processing (Optional)
 # celery==5.3.4
 # redis==5.0.1
@@ -28,3 +32,6 @@ requests==2.31.0
 numpy==1.24.3
 pandas==2.0.3
 jinja2==3.1.2
+
+# Deployment
+gunicorn==20.1.0
