Fix authentication with JWT and resolve import errors

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -19,6 +19,6 @@ python-dotenv==1.0.0
 PyPDF2==3.0.1
 
 # AI & API Libraries
-anthropic==0.25.1
-supabase==1.0.3
-requests==2.31.0
+anthropic
+supabase
+requests
